--- a/package.json
+++ b/package.json
@@ -32,4 +32,11 @@
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
   }
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
+}
+
 }
