--- a/package.json
+++ b/package.json
@@ -23,6 +23,20 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
   },
+{
+  "name": "hospital-portal",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
+  "homepage": "https://dsd228.github.io/hospital-portal"
+}
+
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
@@ -37,6 +51,7 @@
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
   }
+
   "scripts": {
   "dev": "vite",
   "build": "vite build",
